--- a/day7/day_7.html
+++ b/day7/day_7.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>learning css-position</title>
 </head>
+
 <body>
-    
+    <h1>a simle line</h1>
+    <img class="yy" src="harshita.jpg" alt="">
+    <img class="yyy" src="harshita.jpg" alt="">
+    <img class="yyyy" src="harshita.jpg" alt="">
+
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
+    <p> now we are going to study position</p>
 </body>
+
 </html>
