--- a/day7/day_7.html
+++ b/day7/day_7.html
@@ -13,7 +13,7 @@
     <img class="yyy" src="harshita.jpg" alt="">
     <img class="yyyy" src="harshita.jpg" alt="">
 
-    <p> now we are going to study position</p>
+    <p> now I am going to study position</p>
     <p> now we are going to study position</p>
     <p> now we are going to study position</p>
     <p> now we are going to study position</p>
