--- a/day8/index.html
+++ b/day8/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="bannerRight">
-            <img class="bannerImage" src="harshita.jpg" alt="">
+            <img class="bannerImage" src="harshitaa.jpg" alt="">
         </div>
     </div>
     <div class="services">
